# gateau

./: .coveragerc  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  GenerateDocs.py  LICENSE  MAINTAINERS.md  Makefile  README.md  TODO.md  \  clean.sh  foo.tmp  foosetup.py  gateau_tests  meson-vcpkg.txt  meson.build  meson.options  pyproject.toml  requirements.noextras.txt  requirements.txt  setup.py  vcpkg.json
.github/workflows/: build-doxy.yml  build-image.yml  build-sdist.yml  build-wheel.yml  make-release.yml
.minicycle/: entrypoint  pages  tests
RELICENSING/: RELICENSING.txt  RELICENSING.txt.asc.arend  RELICENSING.txt.asc.maybetree
archive/docker/: gateau-builder_2026-01-05.tar  gateau-builder_2026-01-11.tar  gateau-builder_2026-01-12.tar
archive/pipcache/: astropy-7.2.0-cp311-abi3-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  astropy_iers_data-0.2026.1.12.0.42.13-py3-none-any.whl  build-1.4.0-py3-none-any.whl  contourpy-1.3.3-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  fonttools-4.61.1-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  kiwisolver-1.4.9-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  matplotlib-3.10.8-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  meson-1.10.0-py3-none-any.whl  meson_python-0.18.0-py3-none-any.whl  numpy-2.4.1-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  pillow-12.1.0-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  pip-25.3-py3-none-any.whl  pip_tools-7.5.2-py3-none-any.whl  psutil-7.2.1-cp36-abi3-manylinux2010_x86_64.manylinux_2_12_x86_64.manylinux_2_28_x86_64.whl  pyerfa-2.0.1.5-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyparsing-3.3.1-py3-none-any.whl  pyproject_metadata-0.10.0-py3-none-any.whl  pyyaml-6.0.3-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  scipy-1.17.0-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  setuptools-80.9.0-py3-none-any.whl  tqdm-4.67.1-py3-none-any.whl  wheel-0.45.1-py3-none-any.whl
archive/wheel/: gateau-0.1.5-cp39.cp310.cp311.cp312.cp313-none-win_amd64.whl  gateau-0.2.0-cp39.cp310.cp311.cp312.cp313-none-manylinux_2_31_x86_64.whl
archive/wheel-win-firstlight/: gateau-0.2.0-py3-none-any.whl
archive/wheel-win-vcpkg/: gateau-0.2.0-py3-none-any.whl
dockertest/: Dockerfile.debian-bookworm  Dockerfile.debian-bookworm-base  Dockerfile.ubuntu-20-04  Dockerfile.ubuntu-20-04-base  build-debian-bookworm-base.sh  build-debian-bookworm.sh  build-ubuntu-20-04-base.sh  build-ubuntu-20-04.sh  commit-debian-bookworm.sh  interact-debian-bookworm.sh  interact-ubuntu-20-04-base.sh  test-debian-bookworm-base.sh  test-debian-bookworm.sh  test-ubuntu-20-04-base.sh  test-ubuntu-20-04.sh
docs/: Atmosphere_8py.html  BindCPU_8py.html  BindUtils_8py.html  CuInterpUtils_8h.html  CuInterpUtils_8h_source.html  CuScan_8h.html  CuScan_8h_source.html  CuStructs_8h.html  CuStructs_8h_source.html  CustomLogger_8py.html  Filterbank_8py.html  InputChecker_8py.html  InterfaceCPU_8cpp.html  InterfaceCPU_8h.html  InterfaceCPU_8h_source.html  InterfaceCUDA_8h.html  InterfaceCUDA_8h_source.html  InterpUtils_8cpp.html  InterpUtils_8h.html  InterpUtils_8h_source.html  Kernels_8cu.html  Scan_8cpp.html  Scan_8h.html  Scan_8h_source.html  Sources_8py.html  Structs_8h.html  Structs_8h_source.html  Structs_8py.html  annotated.html  bib38.aux  citelist.doc38  citelist.html  classes.html  classtiempo2_1_1CustomLogger_1_1CustomFormatter-members.html  classtiempo2_1_1CustomLogger_1_1CustomFormatter.html  classtiempo2_1_1CustomLogger_1_1CustomGUIFormatter-members.html  classtiempo2_1_1CustomLogger_1_1CustomGUIFormatter.html  classtiempo2_1_1CustomLogger_1_1CustomGUILogger-members.html  classtiempo2_1_1CustomLogger_1_1CustomGUILogger.html  classtiempo2_1_1CustomLogger_1_1CustomLogger-members.html  (+87 more)
doxy/: Demos.dox  Design.dox  Documentation.dox  Doxyfile  DoxygenLayout.xml  InputDicts.dox  UserGuide.dox  UserGuide_casc.dox  UserGuide_inst_tel.dox  UserGuide_output.dox  UserGuide_scan.dox  UserGuide_src_atm.dox  faq.dox  mainpage.dox  maintainers.dox  pub_api_utils.dox  public_api_scan_patterns.dox  public_api_simulator.dox  public_api_utils.dox  refs.bib  windows.dox
gateau_build_backend/: gateau_build_backend.py  pyproject.toml
gtest/: testBasic.cpp  testBasic.cu
podman/: cicd.Dockerfile  cuda11.Dockerfile  cuda11bare.Dockerfile  cuda12.Dockerfile  cuda12bare.Dockerfile  test-all.sh
podman.new/: Dockerfile
scripts/: GenerateDocs.py  build-gsl.sh  build-sdist-with-dir.sh  build-with-dir.sh  clean.sh  mitakihara-test.sh  mitakihara-upload.sh  pip-install-editable-static.sh  update-requirements-txt.sh  wheelrename.py  wheelrename.py.prompt  wheelrename.sh
src/: CMakeLists.txt  SetupGTest.py
src/cpp/: InterfaceCPU.cpp  InterfaceCPU.h
src/cuda/: InterfaceCUDA.h  SimKernels.cu  SimKernels.cu.bk  SimKernels.cu.bk.bad
src/gateau/: __init__.py  __main__.py  atmosphere.py  atmosphere_utils.py  bind_utils.py  bindings.py  cascade.py  custom_logger.py  fileio.py  filterbank.py  ifu.py  input_checker.py  interface.py  materials.py  meson.build  output_utils.py  parallel.py  parallel_utilities.py  scan_patterns.py  selftest.py  simulator.py  source_utils.py  structs.py  templates.py  threadmgr.py  types.py  utilities.py  utils.py
src/gateau/cuda/: InterfaceCUDA.h  SimKernels.cu  interface.h  kernels.cu
src/gateau/include/: fio.h  structs.h  utilities.h
src/gateau/resources/: eta_atm  meson.build
src/include/: CuInterpUtils.h  CuScan.h  FileIO.h  Filterbank.h  InterpUtils.cpp  InterpUtils.h  Scan.cpp  Scan.h  Structs.h  fio.h  structs.h  utilities.h
src/include/tests/: interptest.test  test_InterpUtils.cpp  x_i.test  y_i.test
src/tiempo2/: BindCPU.py  BindUtils.py  FileIO.py  InputChecker.py  Interface.py  Materials.py  Parallel.py  RemoveATM.py  Threadmgr.py  Utils.py
tests/: test_Atmosphere.py  test_Interface.py  test_basic.py  test_cascade.py  test_gpu.py  test_typing.py
tmp/: winfsp-2.1.25156.msi
win/: proxpi.tar.zst  requirements.txt
(+304 files in other folders)
