[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.uv-build]
build = [
    { name = "compile-libgateau", run = "make lib" }
]

[tool.uv-build.hooks]
# Additional hooks or custom steps can be added as needed

[project]
license = "AGPL-3.0-only"
name = "gateau"
description = """GPU-Accelerated Time-dEpendent observAtion simUlator"""
readme = "README.md"
version = "0.1.6"
authors = [
	{name = "Arend Moerman"},
	{name = "maybetree", email = "maybetree48@proton.me"}
	]
dependencies = [
	"numpy",
	"matplotlib",
	"scipy",
	"tqdm",
	"astropy",
	"psutil",
	]

classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: C",
	"Programming Language :: C++",
	"Environment :: GPU :: NVIDIA CUDA :: 11",
	"Operating System :: OS Independent",
	]

requires-python = '>=3.9'




