[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.18.0",
    ]

[project]
license = "AGPL-3.0-only"
name = "gateau"
description = """GPU-Accelerated Time-dEpendent observAtion simUlator"""
readme = "README.md"
version = "0.1.6"
authors = [
	{name = "Arend Moerman"},
	{name = "maybetree", email = "maybetree48@proton.me"}
	]
dependencies = [
	"numpy",
	"matplotlib",
	"scipy",
	"tqdm",
	"astropy",
	"psutil",
	]


classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: C",
	"Programming Language :: C++",
	"Environment :: GPU :: NVIDIA CUDA :: 11",
	"Operating System :: OS Independent",
	]

requires-python = '>=3.9'

[project.optional-dependencies]
dev = ["pip-tools", "wheel-filename"]

#[tool.meson-python]
## TODO is needed?
#wheel.exclude = [
#	"archive",
#	"win",
#	"podman",
#	"tests",
#	"venv",
#	"wheel",
#	"RELICENSING",
#	"doxy",
#]


