[project]
license = "AGPL-3.0-only"
name = "gateau_build_backend"
description = """GPU-Accelerated Time-dEpendent observAtion simUlator"""
readme = "README.md"
version = "0.1.6"
authors = [
	{name = "Arend Moerman"},
	{name = "maybetree", email = "maybetree48@proton.me"}
	]
dependencies = [
	]

classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: C",
	"Programming Language :: C++",
	"Environment :: GPU :: NVIDIA CUDA :: 11",
	"Operating System :: OS Independent",
	]

requires-python = '>=3.9'




