py.install_sources(
  [
    '__init__.py',
    '__main__.py',
    'atmosphere_utils.py',
    'bind_utils.py',
    'bindings.py',
    'cascade.py',
    'custom_logger.py',
    'ifu.py',
    'input_checker.py',
    'materials.py',
    'scan_patterns.py',
    'selftest.py',
    'simulator.py',
    'source_utils.py',
    'structs.py',
    'threadmgr.py',
    'types.py',
  ],
  subdir: 'gateau',
)

subdir('resources')


